tests/cases/compiler-development/artifact/errors/syntax-recovery-item-macro-token-tree.syntax
Program source=tests/cases/compiler-development/artifact/errors/syntax-recovery-item-macro-token-tree.ari
  ParseDiagnostics count=1
    ParseDiagnostic message="unterminated macro invocation" @tests/cases/compiler-development/artifact/errors/syntax-recovery-item-macro-token-tree.ari:1:7 source_id=0 bytes=6..7
      PrimaryLabel message="" @tests/cases/compiler-development/artifact/errors/syntax-recovery-item-macro-token-tree.ari:1:7 source_id=0 bytes=6..7
  Function name=after return=i64 @tests/cases/compiler-development/artifact/errors/syntax-recovery-item-macro-token-tree.ari:2:4 source_id=0 bytes=17..22
    Body
      Return @tests/cases/compiler-development/artifact/errors/syntax-recovery-item-macro-token-tree.ari:3:3 source_id=0 bytes=36..42
        Integer value=7 @tests/cases/compiler-development/artifact/errors/syntax-recovery-item-macro-token-tree.ari:3:10 source_id=0 bytes=43..44
